examples/resolver/primitives/fail/if_arity.axo
const v = if(true, 1)
print(v)
